--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ MarkupSafe==0.15
 South==0.8.2
 bleach==1.2.2
 coverage==3.7.1
+coveralls==0.4.1
 crispy-forms-foundation==0.2.3
 django-crispy-forms==1.3.2
 django-pipeline==1.3.15
